<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controllers.ServiceOrderActivity">

    <item
        android:id="@+id/actionShare"
        android:title="@string/lbl_share"
        android:icon="@mipmap/ic_action_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionFilter"
        android:title="@string/menu_lbl_filter"
        android:icon="@mipmap/ic_action_filter"
        app:showAsAction="always">
            <menu>
                <item
                    android:id="@+id/filterAll"
                    android:title="@string/menu_item_lbl_all" />
                <item
                    android:id="@+id/filterActive"
                    android:title="@string/menu_item_lbl_active" />
                <item
                    android:id="@+id/filterDisable"
                    android:title="@string/menu_item_lbl_descontinue" />
            </menu>
    </item>

</menu>
